# TrillionsTest

./: CMakeLists.txt  README.md  app.cpp  input.xml  mpi.sh  multiply.cpp
cpp/: vector_test.cpp
